# src/main/java/hu/pannonuni/routerangers/controller/UserController.java
@@ -1,21 +1,21 @@
 package hu.pannonuni.routerangers.controller;
 
-import io.swagger.model.UserModel;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
 import java.util.List;
 
 @RestController
-public class UserController implements io.swagger.api.UserApi {
+public class UserController implements hu.pannonuni.api.UsersApi {
 
     @Override
-    public ResponseEntity<UserModel> createUser(UserModel body) {
-        return null;
+    public ResponseEntity<hu.pannonuni.model.UserModel> createUser(hu.pannonuni.model.UserRegistrationModel userRegistrationModel) {
+        return ResponseEntity.status(201).body(new hu.pannonuni.model.UserModel());
     }
 
     @Override
-    public ResponseEntity<List<UserModel>> renderAllUsers() {
-        return null;
+    public ResponseEntity<List<hu.pannonuni.model.UserModel>> renderAllUsers() {
+        return ResponseEntity.ok(new ArrayList<>());
     }
 }
