# src/main/resources/api-contract.yaml
@@ -5,12 +5,19 @@ info:
 servers:
   - url: http://localhost:8080
     description: local development server
+tags:
+  - name: Welcome
+    description: Welcome message
+  - name: User
+    description: User management
 
 paths:
   /welcome:
     get:
       summary: Welcome message
       operationId: welcomeMessage
+      tags:
+        - Welcome
       responses:
         '200':
           description: A welcome message
@@ -20,29 +27,32 @@ paths:
                 type: string
                 example: "Welcome to Route Rangers API"
 
-  /user:
+  /users:
     get:
-      summary: Get user information
+      summary: Render all users
       operationId: renderAllUsers
+      tags:
+        - User
       responses:
         '200':
-          description: User information
+          description: A list of users
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserModel'
-
     post:
       summary: Create a new user
       operationId: createUser
+      tags:
+        - User
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserModel'
+              $ref: '#/components/schemas/UserRegistrationModel'
       responses:
         '201':
           description: User created successfully
@@ -51,30 +61,35 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserModel'
         '400':
-          description: Invalid input data
+          description: Invalid input
 
 components:
   schemas:
+    UserRegistrationModel:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          example: csabavadasz79@gmail.com
+        password:
+          type: string
+          example: "password"
+        repeatPassword:
+          type: string
+          example: "password"
+      required:
+        - email
+        - password
+        - repeatPassword
     UserModel:
       type: object
       properties:
         id:
           type: string
-          format: UUID
+          format: uuid
           example: "123e4567-e89b-12d3-a456-426614174000"
-        firstName:
-          type: string
-          example: "John"
-        midName:
-          type: string
-          example: "Doe"
-        lastName:
-          type: string
-          example: "Doe"
         email:
           type: string
-          example: "john.doe@example.com"
-      required:
-        - firstName
-        - lastName
-        - email
+          format: email
+          example: johndoe@example.com
